test/bad/incompatible-print-param.mac



int main() {
    print << new int[5];
    return 0;
}


int foo() {
    return 0;
}